[package]
name = "soup3-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.libsoup_3_0]
name = "libsoup-3.0"
version = "3"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "soup_sys"

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
version = "0.15.10"

[dependencies.glib]
package = "glib-sys"
version = "0.15.10"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15.10"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
