[package]
name = "wpejavascriptcore-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.wpe_javascriptcore_1_1]
name = "wpe-webkit-1.1" # This is part of libWPEWebKit-1.1.so
version = "1.1"

[package.metadata.system-deps.wpe_javascriptcore_1_1.v2_24]
version = "2.24"

[package.metadata.system-deps.wpe_javascriptcore_1_1.v2_28]
version = "2.28"

[package.metadata.system-deps.wpe_javascriptcore_1_1.v2_38]
version = "2.38"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "wpe_java_script_core_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15.10"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15.10"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_24 = []
v2_28 = ["v2_24"]
v2_38 = ["v2_28"]
dox = []
