[package]
name = "wpewebkit-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.wpe_webkit_1_1]
name = "wpe-webkit-1.1"
version = "1.1"

[package.metadata.system-deps.wpe_webkit_1_1.v2_2]
version = "2.2"

[package.metadata.system-deps.wpe_webkit_1_1.v2_4]
version = "2.4"

[package.metadata.system-deps.wpe_webkit_1_1.v2_6]
version = "2.6"

[package.metadata.system-deps.wpe_webkit_1_1.v2_8]
version = "2.8"

[package.metadata.system-deps.wpe_webkit_1_1.v2_10]
version = "2.10"

[package.metadata.system-deps.wpe_webkit_1_1.v2_12]
version = "2.12"

[package.metadata.system-deps.wpe_webkit_1_1.v2_14]
version = "2.14"

[package.metadata.system-deps.wpe_webkit_1_1.v2_16]
version = "2.16"

[package.metadata.system-deps.wpe_webkit_1_1.v2_18]
version = "2.18"

[package.metadata.system-deps.wpe_webkit_1_1.v2_20]
version = "2.20"

[package.metadata.system-deps.wpe_webkit_1_1.v2_22]
version = "2.22"

[package.metadata.system-deps.wpe_webkit_1_1.v2_24]
version = "2.24"

[package.metadata.system-deps.wpe_webkit_1_1.v2_26]
version = "2.26"

[package.metadata.system-deps.wpe_webkit_1_1.v2_28]
version = "2.28"

[package.metadata.system-deps.wpe_webkit_1_1.v2_30]
version = "2.30"

[package.metadata.system-deps.wpe_webkit_1_1.v2_32]
version = "2.32"

[package.metadata.system-deps.wpe_webkit_1_1.v2_34]
version = "2.34"

[package.metadata.system-deps.wpe_webkit_1_1.v2_36]
version = "2.36"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "wpe_web_kit_sys"

[dependencies]
libc = "0.2"

[dependencies.wpe-sys]
path = "../wpe-sys"

[dependencies.gio]
package = "gio-sys"
version = "0.15.10"

[dependencies.glib]
package = "glib-sys"
version = "0.15.10"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15.10"

[dependencies.soup]
package = "soup3-sys"
path = "../soup3-sys"

[dependencies.wpe_java_script_core]
package = "wpejavascriptcore-sys"
path = "../wpejavascriptcore-sys"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_2 = []
v2_4 = ["v2_2"]
v2_6 = ["v2_4"]
v2_8 = ["v2_6"]
v2_10 = ["v2_8"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_16 = ["v2_14"]
v2_18 = ["v2_16"]
v2_20 = ["v2_18"]
v2_22 = ["v2_20"]
v2_24 = ["v2_22"]
v2_26 = ["v2_24"]
v2_28 = ["v2_26"]
v2_30 = ["v2_28"]
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]
v2_36 = ["v2_34"]
dox = []
