[package]
name = "wpewebkit"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.124"
bitflags = "1.3.2"
once_cell = "1.10"

[dependencies.ffi]
package = "wpewebkit-sys"
path = "../wpewebkit-sys"

[dependencies.gio]
package = "gio"
version = "0.15.11"

[dependencies.gio-sys]
package = "gio-sys"
version = "0.15.10"

[dependencies.glib]
package = "glib"
version = "0.15.11"

[dependencies.glib-sys]
package = "glib-sys"
version = "0.15.10"

[dependencies.gobject-sys]
version = "0.15.10"

[package.metadata.docs.rs]
features = ["dox"]

[features]
v2_2 = ["ffi/v2_2"]
v2_4 = ["ffi/v2_4", "v2_2"]
v2_6 = ["ffi/v2_6", "v2_4"]
v2_8 = ["ffi/v2_8", "v2_6"]
v2_10 = ["ffi/v2_10", "v2_8"]
v2_12 = ["ffi/v2_12", "v2_10"]
v2_14 = ["ffi/v2_14", "v2_12"]
v2_16 = ["ffi/v2_16", "v2_14"]
v2_18 = ["ffi/v2_18", "v2_16"]
v2_20 = ["ffi/v2_20", "v2_18"]
v2_22 = ["ffi/v2_22", "v2_20"]
v2_24 = ["ffi/v2_24", "v2_22"]
v2_26 = ["ffi/v2_26", "v2_24"]
v2_28 = ["ffi/v2_28", "v2_26"]
v2_30 = ["ffi/v2_30", "v2_28"]
v2_32 = ["ffi/v2_32", "v2_30"]
v2_34 = ["ffi/v2_34", "v2_32"]
v2_36 = ["ffi/v2_36", "v2_34"]
dox = []

# TODO: Temporary
default = ["v2_36"]
